--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -30,43 +30,92 @@ body {
   position: relative;
   display: -webkit-flex;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
-/* line 30, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 33, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .item-Wrapp {
   display: -webkit-inline-flex;
   display: inline-flex;
 }
 
-/* line 35, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 39, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-2 .item-Wrapp {
+  width: calc(100vw / 2 - 10px);
+  height: calc(100vw / 2 - 10px);
+}
+
+/* line 46, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-3 .item-Wrapp {
+  width: calc(100vw / 3 - 7px);
+  height: calc(100vw / 3 - 7px);
+}
+
+/* line 53, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-4 .item-Wrapp {
+  width: calc(100vw / 4 - 5px);
+  height: calc(100vw / 4 - 5px);
+}
+
+/* line 60, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-5 .item-Wrapp {
+  width: calc(100vw / 5 - 5px);
+  height: calc(100vw / 5 - 5px);
+}
+
+/* line 67, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-6 .item-Wrapp {
+  width: calc(100vw / 6 - 4px);
+  height: calc(100vw / 6 - 4px);
+}
+
+/* line 74, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-7 .item-Wrapp {
+  width: calc(100vw / 7 - 4px);
+  height: calc(100vw / 7 - 4px);
+}
+
+/* line 81, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-8 .item-Wrapp {
+  width: calc(100vw / 8 - 3px);
+  height: calc(100vw / 8 - 3px);
+}
+
+/* line 88, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.cols-12 .item-Wrapp {
+  width: calc(100vw / 12 - 3px);
+  height: calc(100vw / 12 - 3px);
+}
+
+/* line 94, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box {
   border: 5px solid white;
-  height: 15vw;
-  width: 20vw;
   -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   overflow: hidden;
 }
 
-/* line 46, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 105, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box img {
   height: 100%;
 }
 
-/* line 50, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 109, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box:hover {
   z-index: 6 !important;
   opacity: 1 !important;
   transform: rotate(0deg);
 }
 
-/* line 56, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 115, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale {
   transition: all 0.5s;
 }
 
-/* line 60, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 119, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale:hover {
   -o-transform: scale(1.4);
   -ms-transform: scale(1.4);
@@ -76,24 +125,24 @@ body {
   opacity: 1;
 }
 
-/* line 78, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 137, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 82, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 141, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 88, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 147, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 figure {
   margin: 0;
 }
 
-/* line 93, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 152, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -107,7 +156,7 @@ figure {
   overflow: hidden;
 }
 
-/* line 109, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 168, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog {
   position: relative;
   height: 100vh;
@@ -115,7 +164,7 @@ figure {
   background-color: #000;
 }
 
-/* line 117, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 176, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__container {
   position: absolute;
   height: 100%;
@@ -123,14 +172,14 @@ figure {
   overflow: hidden;
 }
 
-/* line 126, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 185, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img {
   position: absolute;
   height: 100vh;
   width: 300vw;
 }
 
-/* line 132, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 191, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--first {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-1.png") repeat-x;
   background-size: contain;
@@ -138,7 +187,7 @@ figure {
   animation: marquee 60s linear infinite;
 }
 
-/* line 139, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 198, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--second {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-2.png") repeat-x;
   background-size: contain;
