--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -28,46 +28,62 @@ body {
 /* line 25, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box {
   position: relative;
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+}
+
+/* line 29, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.one-row {
+  width: 100%;
+  overflow: hidden;
 }
 
 /* line 33, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.one-row .track-box {
+  width: 800%;
+  overflow: hidden;
+}
+
+/* line 42, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.view-table .track-box {
+  flex-wrap: wrap;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+/* line 53, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .item-Wrapp {
   display: -webkit-inline-flex;
   display: inline-flex;
+  justify-content: center;
 }
 
-/* line 38, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 59, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box {
-  border: 5px solid white;
   -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   overflow: hidden;
 }
 
-/* line 49, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 70, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box img {
   height: 100%;
 }
 
-/* line 54, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 75, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box:hover {
   z-index: 6 !important;
   opacity: 1 !important;
   transform: rotate(0deg);
 }
 
-/* line 60, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 81, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale {
   transition: all 0.5s;
 }
 
-/* line 64, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 85, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale:hover {
   -o-transform: scale(1.4);
   -ms-transform: scale(1.4);
@@ -77,7 +93,7 @@ body {
   opacity: 1;
 }
 
-/* line 75, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 96, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-right:hover {
   -o-transform: translateX(30%) scale(1.4);
   -ms-transform: translateX(30%) scale(1.4);
@@ -86,7 +102,7 @@ body {
   transform: translateX(30%) scale(1.4);
 }
 
-/* line 85, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 106, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-left:hover {
   -o-transform: translateX(-30%) scale(1.4);
   -ms-transform: translateX(-30%) scale(1.4);
@@ -95,24 +111,24 @@ body {
   transform: translateX(-30%) scale(1.4);
 }
 
-/* line 102, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 123, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 106, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 127, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 112, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 133, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 figure {
   margin: 0;
 }
 
-/* line 117, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 138, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -126,7 +142,7 @@ figure {
   overflow: hidden;
 }
 
-/* line 133, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 154, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog {
   position: relative;
   height: 100vh;
@@ -134,7 +150,7 @@ figure {
   background-color: #000;
 }
 
-/* line 141, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 162, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__container {
   position: absolute;
   height: 100%;
@@ -142,14 +158,14 @@ figure {
   overflow: hidden;
 }
 
-/* line 150, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 171, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img {
   position: absolute;
   height: 100vh;
   width: 300vw;
 }
 
-/* line 156, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 177, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--first {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-1.png") repeat-x;
   background-size: contain;
@@ -157,7 +173,7 @@ figure {
   animation: marquee 60s linear infinite;
 }
 
-/* line 163, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 184, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--second {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-2.png") repeat-x;
   background-size: contain;
