item navigation beginn

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -58,7 +58,15 @@ body {
   justify-content: center;
 }
 
-/* line 59, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 58, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .item-Wrapp div,
+.gallery-wrapp .gallery-box .item-Wrapp ul,
+.gallery-wrapp .gallery-box .item-Wrapp li,
+.gallery-wrapp .gallery-box .item-Wrapp p {
+  width: 100%;
+}
+
+/* line 66, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box {
   -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
@@ -66,24 +74,24 @@ body {
   overflow: hidden;
 }
 
-/* line 70, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 77, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box img {
   height: 100%;
 }
 
-/* line 75, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 82, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box:hover {
   z-index: 6 !important;
   opacity: 1 !important;
   transform: rotate(0deg);
 }
 
-/* line 81, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 88, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale {
   transition: all 0.5s;
 }
 
-/* line 85, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 92, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale:hover {
   -o-transform: scale(1.4);
   -ms-transform: scale(1.4);
@@ -93,7 +101,7 @@ body {
   opacity: 1;
 }
 
-/* line 96, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 106, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-right:hover {
   -o-transform: translateX(30%) scale(1.4);
   -ms-transform: translateX(30%) scale(1.4);
@@ -102,7 +110,7 @@ body {
   transform: translateX(30%) scale(1.4);
 }
 
-/* line 106, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 116, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-left:hover {
   -o-transform: translateX(-30%) scale(1.4);
   -ms-transform: translateX(-30%) scale(1.4);
@@ -111,24 +119,24 @@ body {
   transform: translateX(-30%) scale(1.4);
 }
 
-/* line 123, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 133, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 127, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 137, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 133, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 143, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 figure {
   margin: 0;
 }
 
-/* line 138, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 148, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -142,7 +150,7 @@ figure {
   overflow: hidden;
 }
 
-/* line 154, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 164, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog {
   position: relative;
   height: 100vh;
@@ -150,7 +158,7 @@ figure {
   background-color: #000;
 }
 
-/* line 162, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 172, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__container {
   position: absolute;
   height: 100%;
@@ -158,14 +166,14 @@ figure {
   overflow: hidden;
 }
 
-/* line 171, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 181, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img {
   position: absolute;
   height: 100vh;
   width: 300vw;
 }
 
-/* line 177, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 187, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--first {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-1.png") repeat-x;
   background-size: contain;
@@ -173,7 +181,7 @@ figure {
   animation: marquee 60s linear infinite;
 }
 
-/* line 184, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
+/* line 194, C:/Work/GoogleDr/gallery/www/styles/scss/styles.scss */
 .fog__img--second {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-2.png") repeat-x;
   background-size: contain;
@@ -187,6 +195,15 @@ figure {
   }
   100% {
     transform: translate3d(-200vw, 0, 0);
+  }
+}
+
+@keyframes itemAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(2);
   }
 }
 
