--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -54,6 +54,13 @@ body {
       display: -webkit-inline-flex;
       display: inline-flex;
       justify-content: center;
+
+      div,
+      ul,
+      li,
+      p {
+        width: 100%;
+      }
     }
 
     .img-box {
@@ -89,6 +96,9 @@ body {
           -webkit-transform: scale(1.4);
           transform: scale(1.4);
           opacity: 1;
+          // width: 30vw !important;
+          // flex-basis: initial !important;
+          // height: auto !important;
 
         }
 
@@ -198,5 +208,15 @@ figure {
 
   100% {
     transform: translate3d(-200vw, 0, 0);
+  }
+}
+
+@keyframes itemAnimation {
+  0% {
+    transform: scale(1.0);
+  }
+
+  100% {
+    transform: scale(2.0);
   }
 }
