--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,3 +1,5 @@
+@import "itemNav.scss";
+
 body {
   margin: 0
 }
@@ -51,6 +53,7 @@ body {
     }
 
     .item-Wrapp {
+      position: relative;
       display: -webkit-inline-flex;
       display: inline-flex;
       justify-content: center;
