--- a/styles/css/itemNav.css
+++ b/styles/css/itemNav.css
@@ -1,15 +1,21 @@
 /* line 1, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
 .itemNaw {
+  display: none;
   position: absolute;
   bottom: 5px;
 }
 
-/* line 5, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+/* line 6, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
 .itemNaw button {
   border: none;
   border-radius: 5px;
   background-color: aliceblue;
   padding: 3px;
+}
+
+/* line 15, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+[data-hoverSkale="true"] .itemNaw {
+  display: block;
 }
 
 /*# sourceMappingURL=itemNav.css.map */
