--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,19 +1,35 @@
 /* line 1, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
-.itemNaw {
-  display: none;
-  position: absolute;
-  bottom: 5px;
+button:focus {
+  outline: none;
 }
 
-/* line 6, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+/* line 5, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+.itemNaw {
+  position: absolute;
+  top: 5px;
+  text-align: right;
+}
+
+/* line 11, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
 .itemNaw button {
+  margin: 10px;
   border: none;
   border-radius: 5px;
-  background-color: aliceblue;
-  padding: 3px;
+  background-color: #0404043d;
+  padding: 5px;
+  color: #b95700;
+  font-size: 25px;
+  transition: all 0.3s;
+  opacity: 0.8;
 }
 
-/* line 15, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+/* line 22, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
+.itemNaw button:hover {
+  transform: scale(1.2);
+  opacity: 1;
+}
+
+/* line 30, ../../../MyProgects/mygallery/styles/scss/itemNav.scss */
 [data-hoverSkale="true"] .itemNaw {
   display: block;
 }
